[혜원] 디버깅 다지움!! 세션 처리 전!!
거의 끝!!!

--- a/public/credit-shop.html
+++ b/public/credit-shop.html
@@ -198,7 +198,7 @@
             const response = await fetch('/firebase-config');
             const firebaseConfig = await response.json();
 
-            console.log('Firebase 설정 응답:', firebaseConfig); // 디버그용
+            // console.log('Firebase 설정 응답:', firebaseConfig); // 디버그용
 
             // databaseURL만 있어도 Firestore 연결 시도
             // if (typeof firebase !== 'undefined' && firebaseConfig.databaseURL) {
