[혜원] url세션처리

--- a/public/credit-shop.html
+++ b/public/credit-shop.html
@@ -316,6 +316,32 @@
 
     // HTTP 방식으로 success 페이지에 데이터 전달하는 함수도 전역으로 정의
     function redirectToSuccessWithHttpData(paymentData, userId) {
+        // 서버에 데이터 임시 저장 요청
+        fetch('/store-payment-data', {
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/json'
+            },
+            body: JSON.stringify({
+                paymentData: paymentData,
+                userId: userId
+            })
+        })
+            .then(response => response.json())
+            .then(data => {
+                if (data.success) {
+                    // 토큰 기반 URL로 리다이렉트 (민감정보 없음)
+                    window.location.href = data.redirectUrl;
+                } else {
+                    alert('결제 데이터 저장 실패: ' + data.message);
+                }
+            })
+            .catch(error => {
+                console.error('❌ 데이터 저장 요청 실패:', error);
+                alert('서버 통신 실패');
+            });
+
+
         // form을 동적으로 생성하여 POST 방식으로 데이터 전송
         const form = document.createElement('form');
         form.method = 'POST';
