--- a/public/credit-shop.html
+++ b/public/credit-shop.html
@@ -284,6 +284,7 @@
 
         if (!uid) {
             alert('UID가 없습니다. 다시 로그인해주세요.');
+            window.location.href = '/login';
             return;
         }
 
@@ -301,16 +302,26 @@
 
                     console.log('✅ 사용자 이름:', currentUserName);
                     console.log('✅ 사용자 이메일:', currentUserEmail);
+                    // 사용자 닉네임 화면 출력More actions
+                    document.getElementById('user-id').textContent = currentUserName;
                 } else {
                     console.log('해당 uid의 사용자 정보 없음');
+                    alert('등록되지 않은 사용자입니다. 다시 로그인해주세요.');
+                    window.location.href = '/login';
+                    return;
                 }
             } catch (error) {
                 console.error('❌ 사용자 정보 조회 실패:', error);
+                alert('사용자 정보를 불러올 수 없습니다. 다시 로그인해주세요.');
+                window.location.href = '/test_login.html';
+                return;
             }
         } else {
-            console.log('Firebase 비활성화 - 테스트 모드');
-            currentUserName = '테스트 사용자';
-            currentUserEmail = 'test@example.com';
+            // Firebase 연결 안됨 - 로그인 페이지로 리다이렉트
+            console.error('❌ Firebase가 연결되지 않았습니다.');
+            alert('시스템에 문제가 발생했습니다. 관리자에게 문의하세요.');
+            window.location.href = '/login';
+            return;
         }
     });
 
