--- a/public/login.html
+++ b/public/login.html
@@ -201,7 +201,7 @@
                 firebase.initializeApp(firebaseConfig);
                 db = firebase.firestore();
                 firebaseInitialized = true;
-                console.log('✅ Firebase 클라이언트 초기화 성공');
+                console.log('✅ 로그인 페이지에서 Firebase 클라이언트 초기화 성공');
             } else {
                 console.warn('⚠️ Firebase 설정을 가져올 수 없음');
             }
